It does not matter how slowly you go as long as you do not stop.
-- Confucius

First they ignore you, then they laugh at you, then they fight you,
then you win. –- Mahatma Gandhi

Fri, Mar 20, 2009
---------------------------------------------------------------------
- More work on editing a contact.

Wed, Mar 18, 2009
---------------------------------------------------------------------
- Updated view specs to use Factories, 100% pass.
- Updated task controller specs to use Factories.
- A week of transition to [factory_girl] is over: 317 specs, all green.

Mon, Mar 16, 2009
---------------------------------------------------------------------
- Refactored leads controller specs using factories.

Sun, Mar 15, 2009
---------------------------------------------------------------------
- Started refactoring leads controller specs.

Sat, Mar 14, 2009
---------------------------------------------------------------------
- Implemented specs for Account views and Home controller.
- Implemented specs for Campaigns controller.

Fri, Mar 13, 2009
---------------------------------------------------------------------
- Implemented specs for Settings model.

Thu, Mar 12, 2009
---------------------------------------------------------------------
- 100% spec code coverage for Accounts, Contacts, and Opportunities.

Wed, Mar 11, 2009
---------------------------------------------------------------------
- Installed [factory_girl] plugin.
- Created model factories for all core models.
- Rewrote account controller specs to use factories instead of mocks.
- Started refactoring opportunity controller specs to use factories instead of mocks
- Added #as_hash and #invert class methods to Settings

Tue, Mar 10, 2009
---------------------------------------------------------------------
- Put in place inline for Lead editing and conversion.
- Started with inline forms for Task editing.
- Depreciated contexts, refactored application's JavaScript.

Mon, Mar 9, 2009