@@ -72,10 +72,14 @@ class ContactsController < ApplicationController
       else
         @users = User.all_except(@current_user)
         @accounts = Account.my(@current_user).all(:order => "name")
-        if params[:account][:id].blank?
-          @account = Account.new(:user => @current_user)
-        else
+        if params[:account][:id]
           @account = Account.find(params[:account][:id])
+        else
+          if request.referer =~ /\/accounts\/(.+)$/
+            @account = Account.find($1) # related account
+          else
+            @account = Account.new(:user => @current_user)
+          end
         end
         format.js   # create.js.rjs
         format.xml  { render :xml => @contact.errors, :status => :unprocessable_entity }
@@ -96,10 +100,10 @@ class ContactsController < ApplicationController
       else
         @users = User.all_except(@current_user)
         @accounts = Account.my(@current_user).all(:order => "name")
-        if params[:account][:id].blank?
-          @account = Account.new(:user => @current_user)
+        if @contact.account
+          @account = Account.find(@contact.account.id)
         else
-          @account = Account.find(params[:account][:id])
+          @account = Account.new(:user => @current_user)
         end
         format.js
         format.xml  { render :xml => @contact.errors, :status => :unprocessable_entity }
