@@ -11,6 +11,3 @@
     = f.submit "Create Contact", :onclick => %/$("contact_assigned_to").value = $F("account_assigned_to")/
     or
     = link_to_remote("Cancel", :url => new_contact_path, :with => "{ cancel: true }")
-
-%script{:type => "text/javascript"}
-  = @account.id.blank? ? "crm.create_account();" : "crm.select_account();"
