@@ -2,3 +2,4 @@ if params[:cancel] != "true"
   page[:create_contact].replace_html :partial => "create"
 end
 page.call "crm.flip_form", :create_contact
+page.call "crm.create_or_select_account", request.referer =~ /\/accounts\// || @account.id.blank?
