@@ -15,13 +15,7 @@ if @contact.errors.empty?
   end
 else  
   page[id].replace_html :partial => "edit"
-  if @account.id.blank?
-    page.call "crm.create_account"
-  elsif request.referer !~ /\/accounts\//
-    page.call "crm.select_account"
-  else
-    page.call "crm.select_existing_account"
-  end
+  page.call "crm.create_or_select_account", request.referer =~ /\/accounts\// || @account.id.blank?
   page[id].visual_effect :shake, :duration => 0.25, :distance => 6
   page[:contact_first_name].focus
 end
