@@ -4,6 +4,12 @@ It does not matter how slowly you go as long as you do not stop.
 First they ignore you, then they laugh at you, then they fight you,
 then you win. –- Mahatma Gandhi
 
+Sat, Mar 21, 2009
+---------------------------------------------------------------------
+- More work on [Edit Contact] form (spec coverage pending).
+- Fixed task controller specs when due tomorrow == due this week.
+- Added spec coverage for [Edit Contact].
+
 Fri, Mar 20, 2009
 ---------------------------------------------------------------------
 - More work on editing a contact.
